# vector-search-backend

./: README.md  main.py  mock_data.py  models.py  pyproject.toml  test_server.py
api/: main.py  rag.py
api/db/: qdrant.py
pdfs/: Copy of One Stop Shop.xlsx
